refactor code. user can subscribe or un subscribe for emails. update emails format. receive emails when user register.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=Notification
 email.subject.itemNotReserved=Item Not Reserved
-email.text.itemNotReserved=Dear %s, Your item %s has been marked as NOT_RESERVED. Please go to re-reserve it.
+email.text.itemNotReserved=Dear %s, Your item %s has been marked as NOT_RESERVED. Please go to re-reserve it   if you want to unsubscribe follow this link %s .
+
+email.subject.registerComplete = register complete
+email.text.registerComplete=Dear %s, welcome! Your registration is complete with username %s ! if you want to unsubscribe follow this link %s .
+
+
 server.port=8082
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -8,3 +13,4 @@ spring.mail.username=yuosifgamal8@gmail.com
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+unsubscribe.service.url =http://localhost:8081/
