refactor code. and using design pattern (strategy pattern) to choose what mail will send based on type. make class to import information from app.prop

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=Notification
-email.subject.itemNotReserved=Item Not Reserved
-email.text.itemNotReserved=Dear %s, Your item %s has been marked as NOT_RESERVED. Please go to re-reserve it   if you want to unsubscribe follow this link %s .
+email.subjectitemNotReserved=Item Not Reserved
+email.textitemNotReserved=Dear %s, Your item %s has been marked as NOT_RESERVED. Please go to re-reserve it.
 
-email.subject.registerComplete = register complete
-email.text.registerComplete=Dear %s, welcome! Your registration is complete with username %s ! if you want to unsubscribe follow this link %s .
-
+email.subjectRegisterComplete=Register Complete
+email.textRegisterComplete=Dear %s, welcome! Your registration is complete with username %s! If you want to unsubscribe, follow this link: %s.
+email.unsubscribeServiceUrl=http://localhost:8081/
 
 server.port=8082
 spring.mail.host=smtp.gmail.com
@@ -13,4 +13,3 @@ spring.mail.username=yuosifgamal8@gmail.com
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-unsubscribe.service.url =http://localhost:8081/
